# aml-graph

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements-serve.txt  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
app/: __init__.py  api.py  streamlit_app.py
configs/: config.yaml
data/: README.md
docs/: ai_usage.md  beginner_guide.md  description.md  description.txt  slides.md
notebooks/: mvp_aml.ipynb
outputs/: metrics.json  narrative_cache.json
src/: __init__.py  baseline.py  config.py  config_loader.py  data_io.py  features.py  gnn.py  graph_build.py  lgbm_worker.py  metrics.py  motifs.py  narrative.py  pipeline.py  splits.py  tracking.py  viz.py
tests/: conftest.py  test_metrics.py  test_motifs.py  test_no_leakage.py
